--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     
     <title>React App</title>
   </head>
-  <header id="root"> </header>
+  <header > </header>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div></div>
+    <div id="root"></div>
     
   </body>
 </html>
